- adjust parsing of aria2 output for aria2 1.4, fixes bug #51354, patch from
  Funda Wang
- use urpmi log API for the transaction failed message instead of
  printing it on the console so that installer can save each error
  with each transaction log instead of only having a summary at end
- urpmi:
  o allow bash-completion to complete to .spec files as well

Version 6.25.5 - 23 April 2009

- gurpmi:
  o do not advise to restart in --auto mode
  o log bad signatures on stderr

Version 6.25.4 - 20 April 2009

- add NoDisplay=true to gurpmi.desktop

Version 6.25.3 - 18 April 2009

- fix gurpmi.desktop (#50047)

Version 6.25.2 - 15 April 2009

- translation updates

Version 6.25.1 - 31 March 2009

- prevent rpmdrake from crashing (#49354), side effect of #49226 fix

Version 6.25 - 31 March 2009

- downgrade cryptic log message to debug message, fixes #49226
- enable installer to cancel installation

Version 6.24 - 27 March 2009

- return error code when user aborts gurpmi/gurpmi2

Version 6.23 - 25 March 2009

- log user interactions to stdout in gurpmi2
- exit with non 0 error code when failing to add a media, fixes bug #47952
- when using urpme -a, properly report when no packages could be removed,
  fixes bug #48506
- return a non 0 error code when the user stops the install when an upgrade
  would remove some packages (because of dependencies issues)
- fix a circular reference that was causing rpmdb to be opened many
  times in installer

Version 6.22.4 - 9 March 2009

- change installer API (in order to fix detecting whether installing ackages
  succedded or not)

Version 6.22.3 - 5 March 2009

- urpmi
  o fix verifying packages signatures in chrooted environments (especially
    important for installer where there's no rpmdb in / (really /var/lib/rpm)
    and thus no keys to check against)

Version 6.22.2 - 4 March 2009

- close another fd leak (needed for drakx)

Version 6.22.1 - 4 March 2009
