@@ -1,3 +1,5 @@
+- properly invalidate mirror cache when the distro version changes 
+  (ie when product.id changes). Fixes bug #52133, patch from Aurélien Lefebvre
 - adjust parsing of aria2 output for aria2 1.4, fixes bug #51354, patch from
   Funda Wang
 - use urpmi log API for the transaction failed message instead of
